# obs-catpion

./: .gitignore  CMakeLists.txt  README.md  prepare.sh
data/locale/: en-US.ini
forms/: catpion.ui
src/: catpion-ui.cpp  catpion-ui.hpp  catpion.c  catpion.h  catpions.c  line-gen.c  line-gen.h  model.c  model.h  obs-text-pthread-thread.c  obs-text-pthread.h  pipewire-audio.c  pipewire-audio.h  tinyosc.c  tinyosc.h
